--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
 
 <!-- FREE TOOLS -->
-<section id="tools" class="section">
+<section id="tools" class="section free tools">  
   <h2 class="section-title">Free Tools</h2>
   <p class="section-sub">AI & automation tools to help you work smarter</p>
 
@@ -193,7 +193,7 @@
 
 
 <!-- SERVICES -->
-<section id="services" class="section">
+<section id="services" class="section services">  
   <h2 class="section-title">Our Services</h2>
   <p class="section-sub">Complete solutions for your digital transformation</p>
 
