--- a/digital-business-fa.html
+++ b/digital-business-fa.html
@@ -1,31 +1,46 @@
-<section class="hero" style="text-align:center; padding:6rem 1rem; max-width:900px; margin:auto;">
-  <h1 style="font-size:2.8rem; font-weight:900; color:#0A1A2F; line-height:1.3;">
-    ساخت یک بیزنس آنلاین باکلاس و درآمدزا، از همین امروز شروع می‌شود
+<section class="hero" style="
+  text-align:center; 
+  padding:7rem 1rem; 
+  max-width:900px; 
+  margin:auto;
+  background: linear-gradient(135deg, #0A1A2F, #1E3A8A 40%, #D946EF);
+  border-radius:24px;
+  color:white;
+">
+  <h1 style="font-size:3rem; font-weight:900; line-height:1.3; margin-bottom:1.5rem;">
+    مسیر ساخت یک بیزنس آنلاین لوکس و درآمدزا از همین لحظه شروع می‌شود
   </h1>
 
-  <p style="font-size:1.2rem; margin:1.6rem 0 2.4rem; color:#475569; line-height:1.8;">
-    اگر می‌خواهی درآمد دلاری، آزادی زمانی و استقلال واقعی را تجربه کنی،
-    اما نمی‌دانی از کجا شروع کنی، اینجا همان جایی است که باید باشی.
-    هر روز صدها نفر وارد دنیای بیزنس آنلاین می‌شوند—
-    اما فقط کسانی که <strong>سیستم، مربی و استراتژی درست</strong> دارند موفق می‌شوند.
+  <p style="font-size:1.3rem; line-height:2; max-width:650px; margin:0 auto 2.5rem; opacity:0.95;">
+    اگر به دنبال درآمد دلاری، آزادی زمانی و استقلال واقعی هستی  
+    اینجا همان نقطه‌ای است که مسیرت عوض می‌شود.  
+    تنها چیزی که نیاز داری: <strong>استراتژی درست + مربی درست + سیستم درست</strong>
   </p>
 
   <a href="#video" style="
-    padding:1rem 2rem; font-size:1.1rem; background:#0A1A2F; color:white;
-    border-radius:12px; text-decoration:none; font-weight:700;">
-    تماشا کردن ویدیو معرفی
+    padding:1.1rem 2.5rem; 
+    background:#F0B742; 
+    color:#0A1A2F;
+    border-radius:14px; 
+    display:inline-block;
+    font-size:1.1rem; 
+    font-weight:800; 
+    text-decoration:none;
+    box-shadow:0 8px 25px rgba(0,0,0,0.25);
+  ">
+    مشاهده ویدیو معرفی
   </a>
 </section>
 
 
-<!-- VIDEO SECTION (TEASER) -->
-<section id="video" style="padding:4rem 1rem; text-align:center;">
-  <h2 style="font-size:2rem; font-weight:900; color:#0A1A2F; margin-bottom:1rem;">
-    این ویدیو را ببین… مسیرت روشن‌تر می‌شود
+<!-- 🔵 VIDEO SECTION -->
+<section id="video" style="padding:5rem 1rem; text-align:center; background:#F9FAFB;">
+  <h2 style="font-size:2.3rem; font-weight:900; color:#0A1A2F; margin-bottom:1.5rem;">
+    این ویدیو مقدمهٔ مسیر توست
   </h2>
 
-  <div style="max-width:720px; margin:0 auto;">
-    <iframe width="100%" height="405"
+  <div style="max-width:780px; margin:0 auto; border-radius:18px; overflow:hidden; box-shadow:0 12px 40px rgba(0,0,0,0.15);">
+    <iframe width="100%" height="430"
       src="https://www.youtube.com/embed/CV9l3BhjsAw"
       title="YouTube video"
       frameborder="0"
@@ -34,77 +49,121 @@
     </iframe>
   </div>
 
-  <p style="color:#475569; font-size:1rem; margin-top:1.5rem; line-height:1.8;">
-    این فقط مقدمه است.  
-    ویدیوی کامل + نقشه راه ۶ مرحله‌ای،  
-    فقط برای افرادی ارسال می‌شود که واقعاً می‌خواهند مسیرشان را شروع کنند.
+  <p style="color:#334155; font-size:1.1rem; margin-top:2rem; max-width:600px; margin:auto; line-height:1.9;">
+    این تنها شروع است.  
+    ویدیو کامل + PDF نقشه راه ۶ مرحله‌ای را فقط برای افرادی ارسال می‌کنم  
+    که واقعاً تصمیم دارند شروع کنند.
   </p>
 </section>
 
 
-<!-- EMAIL FORM SECTION -->
-<section style="padding:4rem 1rem; background:#F9FAFB; text-align:center;">
-  <h2 style="font-size:2rem; font-weight:900; color:#0A1A2F; margin-bottom:1rem;">
-    دریافت ویدیوی کامل + نقشه راه اختصاصی
+<!-- 🟣 EMAIL FORM -->
+<section style="
+  padding:5rem 1rem; 
+  background:linear-gradient(135deg,#F0B742,#14B8A6,#3B82F6);
+  text-align:center;
+  color:white;
+">
+  <h2 style="font-size:2.4rem; font-weight:900; margin-bottom:1rem;">
+    دریافت ویدیوی کامل + PDF نقشه راه شروع
   </h2>
 
-  <p style="max-width:600px; margin:0 auto 2rem; font-size:1.05rem; color:#475569; line-height:1.7;">
-    ویدیوی کامل شامل آموزش مرحله‌به‌مرحله، استراتژی‌های High-Ticket،
-    و توضیح کامل سیستم همکاری با تیم ماست.
+  <p style="max-width:650px; margin:0 auto 2.5rem; font-size:1.1rem; line-height:2;">
+    محتوایی که برایت ارسال می‌شود،  
+    نتیجهٔ تجربهٔ واقعی، تست‌شده، و کاملاً کاربردی برای ساخت یک درآمد High-Ticket است.
     ایمیلت را وارد کن تا همین الان برایت ارسال شود.
   </p>
 
-  <form style="max-width:450px; margin:0 auto; text-align:center;">
-    <input type="email" placeholder="ایمیل خود را وارد کنید" required
-      style="width:100%; padding:1rem; border-radius:12px; border:1px solid #CBD5E1;
-      font-size:1rem; margin-bottom:1rem;">
+  <form style="max-width:450px; margin:0 auto;">
+    <input type="email" placeholder="ایمیل خود را وارد کنید"
+      style="
+        width:100%; 
+        padding:1rem; 
+        border-radius:14px; 
+        border:none;
+        font-size:1.1rem; 
+        margin-bottom:1.2rem;
+        box-shadow:0 4px 15px rgba(0,0,0,0.2);
+      " required>
     
     <button type="submit"
-      style="width:100%; background:#0A1A2F; color:white; padding:1rem;
-      border:none; border-radius:12px; font-size:1.1rem; font-weight:700;">
-      دریافت لینک ویدیو + PDF
+      style="
+        width:100%; 
+        padding:1rem; 
+        background:#0A1A2F; 
+        color:#F0B742;
+        border:none; 
+        border-radius:14px; 
+        font-size:1.2rem; 
+        font-weight:900;
+        box-shadow:0 8px 25px rgba(0,0,0,0.3);
+      ">
+      دریافت لینک اختصاصی
     </button>
   </form>
 </section>
 
 
-<!-- FEATURES SECTION -->
-<section class="features" style="padding:5rem 1rem; max-width:1100px; margin:auto;">
-  <h2 style="text-align:center; font-size:2.3rem; font-weight:900; color:#0A1A2F; margin-bottom:3rem;">
-    چرا این سیستم با همه چیزهایی که دیدی فرق دارد؟
+<!-- 🟩 FEATURES SECTION -->
+<section style="padding:6rem 1rem; background:white; max-width:1200px; margin:auto;">
+  <h2 style="text-align:center; font-size:2.6rem; font-weight:900; color:#0A1A2F; margin-bottom:3rem;">
+    چرا این سیستم تبدیل‌محورترین مدل High-Ticket است؟
   </h2>
 
-  <div style="display:grid; grid-template-columns:1fr 1fr; gap:2rem;">
-    <div style="background:white; padding:2rem; border-radius:14px; box-shadow:0 8px 25px rgba(0,0,0,0.06);">
-      <h3 style="font-size:1.3rem; font-weight:800; color:#0A1A2F;">ساخت سیستم درآمدی High-Ticket</h3>
-      <p style="color:#475569; line-height:1.7;">
-        سیستم‌هایی که درآمدهای واقعی و پایدار می‌سازند، محصول ۱۰ دلاری نمی‌فروشند—
-        روی محصولات و سرویس‌های با ارزش کار می‌کنند. این یعنی درآمد کمتر اما با کیفیت بالاتر.
+  <div style="display:grid; grid-template-columns:repeat(auto-fit,minmax(300px,1fr)); gap:2rem;">
+    
+    <div style="background:#F9FAFB; padding:2.2rem; border-radius:16px; box-shadow:0 8px 30px rgba(0,0,0,0.08);">
+      <h3 style="font-size:1.4rem; font-weight:800; margin-bottom:1rem; color:#0A1A2F;">
+        سیستم درآمدی واقعی، نه محصول ۱۰ دلاری
+      </h3>
+      <p style="color:#475569; line-height:1.9;">
+        در High-Ticket تو برای محصولات و سرویس‌هایی کار می‌کنی  
+        که ارزش بالا دارند، درآمد بالا می‌سازند و مخاطب باکیفیت دارند.
       </p>
     </div>
 
-    <div style="background:white; padding:2rem; border-radius:14px; box-shadow:0 8px 25px rgba(0,0,0,0.06);">
-      <h3 style="font-size:1.3rem; font-weight:800; color:#0A1A2F;">مربی‌گری هوشمند + همراهی واقعی</h3>
-      <p style="color:#475569; line-height:1.7;">
-        در این مسیر تنها نیستی. قدم‌به‌قدم کنار تو هستیم تا سریع‌تر و بدون سردرگمی رشد کنی.
+    <div style="background:#F9FAFB; padding:2.2rem; border-radius:16px; box-shadow:0 8px 30px rgba(0,0,0,0.08);">
+      <h3 style="font-size:1.4rem; font-weight:800; margin-bottom:1rem; color:#0A1A2F;">
+        همراهی واقعی + کوچینگ قدم‌به‌قدم
+      </h3>
+      <p style="color:#475569; line-height:1.9;">
+        تو تنها نیستی. در هر مرحله راهنماییت می‌کنم تا اشتباه نروی و سریع‌تر پیشرفت کنی.
       </p>
     </div>
+
   </div>
 </section>
 
 
-<!-- FINAL CTA -->
-<section style="padding:5rem 1rem; text-align:center;">
-  <h2 style="font-size:2.2rem; font-weight:900; color:#0A1A2F; margin-bottom:1rem;">
+<!-- ⭐ FINAL CTA -->
+<section style="
+  padding:6rem 1rem; 
+  text-align:center; 
+  background:linear-gradient(135deg,#0A1A2F,#1E3A8A,#14B8A6);
+  color:white;
+  border-radius:22px;
+  margin:3rem auto;
+  max-width:1200px;
+">
+  <h2 style="font-size:2.5rem; font-weight:900; margin-bottom:1rem;">
     اگر آماده‌ای مسیرت را متحول کنی…
   </h2>
-  <p style="max-width:600px; margin:0 auto 2.5rem; color:#475569; line-height:1.7;">
-    ایمیلت را وارد کن تا ویدیوی کامل + PDF مسیر شروع بیزنس آنلاین را دریافت کنی.
+
+  <p style="max-width:600px; margin:0 auto 2.5rem; font-size:1.15rem; line-height:2;">
+    ایمیلت را وارد کن تا ویدیوی کامل + PDF نقشه راه High-Ticket  
+    همین الان برایت ارسال شود.
   </p>
 
   <a href="#video" style="
-    padding:1rem 2rem; font-size:1.1rem; background:#0A1A2F; color:white;
-    border-radius:12px; text-decoration:none; font-weight:700;">
-    بازگشت به ویدیو
+    padding:1rem 2rem; 
+    background:#F0B742; 
+    color:#0A1A2F; 
+    font-size:1.2rem; 
+    font-weight:900;
+    border-radius:14px; 
+    text-decoration:none;
+    box-shadow:0 6px 20px rgba(0,0,0,0.3);
+  ">
+    مشاهده دوباره ویدیو
   </a>
 </section>
