Update cookie-policy.html updated header

--- a/cookie-policy.html
+++ b/cookie-policy.html
@@ -10,58 +10,59 @@
 <link rel="stylesheet" href="../css/tools.css" />
 
 <style>
-  body {
-    font-family: Arial, sans-serif;
-    padding: 2rem;
-    max-width: 900px;
-    margin: auto;
-    line-height: 1.7;
-    color: #333;
-  }
-  h1, h2 { color: #0f172a; }
+body {
+  font-family: Arial, sans-serif;
+  padding: 2rem;
+  max-width: 900px;
+  margin: auto;
+  line-height: 1.7;
+  color: #333;
+}
+h1, h2 { color: #0f172a; }
 </style>
 </head>
 
 <body class="tools-page">
 
 <!-- HEADER -->
-<div id="header-placeholder"></div>
-<script>
-fetch("../components/header-tools.html")
-  .then(res => res.text())
-  .then(html => document.getElementById("header-placeholder").innerHTML = html);
-</script>
+<header class="main-header">
+  <div class="nav-inner">
+    <a href="/" class="brand-link">
+      <img src="/assets/logo.svg" class="brand-logo" alt="Logo">
+      <div>
+        <div class="brand-name">Bita Digital Hub</div>
+        <div class="brand-tagline">Learn. Build. Automate. Succeed.</div>
+      </div>
+    </a>
+    <a href="/" class="btn btn-back-home">Back to Home</a>
+  </div>
+</header>
 
 <h1>Cookie Policy</h1>
 <p>Last updated: February 2025</p>
 
-<p>
-This Cookie Policy explains how Bita Digital Hub (“we”, “our”, “us”) uses cookies and similar technologies.
-</p>
+<p>This Cookie Policy explains how Bita Digital Hub uses cookies and similar technologies.</p>
 
 <h2>1. What Are Cookies?</h2>
 <p>
-Cookies are small text files stored on your device when you visit a website. They help websites function properly and analyze usage.
+Cookies are small text files stored on your device when you visit a website.
 </p>
 
 <h2>2. How We Use Cookies</h2>
-<p>We use cookies for:</p>
 <ul>
   <li>Website analytics (Google Analytics)</li>
   <li>Advertising personalization (Google AdSense)</li>
   <li>Security and performance (Cloudflare)</li>
-  <li>Saving simple user preferences</li>
 </ul>
 
 <h2>3. Types of Cookies</h2>
 <ul>
-  <li><strong>Essential cookies:</strong> Required for the website to function.</li>
-  <li><strong>Analytics cookies:</strong> Help us understand visitor behavior.</li>
-  <li><strong>Advertising cookies:</strong> Used to deliver relevant ads.</li>
+  <li>Essential cookies</li>
+  <li>Analytics cookies</li>
+  <li>Advertising cookies</li>
 </ul>
 
 <h2>4. Third-Party Cookies</h2>
-<p>Third-party services may set their own cookies, including:</p>
 <ul>
   <li>Google Analytics</li>
   <li>Google AdSense</li>
@@ -69,26 +70,16 @@ Cookies are small text files stored on your device when you visit a website. The
 </ul>
 
 <h2>5. Cookie Control</h2>
-<p>You may choose to:</p>
 <ul>
-  <li>Disable cookies in your browser settings</li>
-  <li>Opt out of personalized ads via Google Ads Settings</li>
+  <li>Disable cookies in browser settings</li>
+  <li>Opt out of personalized ads</li>
 </ul>
 
-<p>
-Note: Disabling cookies may impact website functionality.
-</p>
-
 <h2>6. Updates</h2>
-<p>
-We may update this Cookie Policy. When we do, the date at the top will change.
-</p>
+<p>This Policy may change occasionally.</p>
 
 <h2>7. Contact</h2>
-<p>
-If you have questions about our Cookie Policy, email:  
-<strong>info@bitadigitalhub.com</strong>
-</p>
+<p>Email: <strong>info@bitadigitalhub.com</strong></p>
 
 <!-- FOOTER -->
 <div id="footer-placeholder"></div>
