--- a/personality-test/intro.html
+++ b/personality-test/intro.html
@@ -115,7 +115,7 @@ fetch("../../components/header-tools.html")
   </ul>
 
   <div class="center">
-    <a href="personality-test/questions.htm" class="start-btn">شروع تست</a>
+    <a href="landing.html" class="start-btn">شروع تست</a>
   </div>
 
 </div>
