--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
   <div class="cta-buttons">
     <a href="https://www.bitaashoori.com" target="_blank" class="btn primary">Start Your Online Business</a>
-    <a href="digital-business-fa.html" target="_blank" class="btn primary">آموزش و ساخت بیزنس آنلاین پایدار</a>
+    <a href="personality-test/intro.html" target="_blank" class="btn primary">آموزش و ساخت بیزنس آنلاین پایدار</a>
   </div>
 
    <div class="cta-buttons" style="margin-top:2rem; text-align:center;">
