--- a/index.html
+++ b/index.html
@@ -3,6 +3,20 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  
+  <!-- Open Graph (Social Media Preview) -->
+  <meta property="og:title" content="Bita Digital Hub | Build • Automate • Earn Online" />
+  <meta property="og:description" content="Tools, automations, and data-driven resources to help you build and grow online." />
+  <meta property="og:image" content="https://bitadigitalhub.com/assets/b-logo.jpg" />
+  <meta property="og:url" content="https://bitadigitalhub.com" />
+  <meta property="og:type" content="website" />
+  
+  <!-- Twitter Card (Also used by Telegram & iMessage) -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Bita Digital Hub" />
+  <meta name="twitter:description" content="Build • Automate • Earn Online" />
+  <meta name="twitter:image" content="https://bitadigitalhub.com/assets/b-logo.jpg" />
+
 
   <title>Bita Digital Hub | Build • Automate • Earn Online</title>
   <meta name="description"
