Update index-tools.html added comments

--- a/tools/index-tools.html
+++ b/tools/index-tools.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <title>Free Digital Tools | Bita Digital Hub</title>
+  <title>Digital Tools | Bita Digital Hub</title>
   <meta name="description"
-        content="Free online tools by Bita Digital Hub — QR generator, URL shortener, CSV cleaner, file converter, password generator, ZIP tools and more." />
+        content="Online Tools by Bita Digital Hub — QR generator, URL shortener, CSV cleaner, file converter, password generator, ZIP tools and more." />
 
   <!-- Styles -->
   <link rel="stylesheet" href="../css/style.css" />
@@ -153,7 +153,7 @@ fetch("/components/header.html")
 
 <!-- PAGE HEADER -->
 <section class="tools-header">
-  <h1>Free Tools That Make Life Easier</h1>
+  <h1>Online Tools That Make Life Easier</h1>
   <p>Simplify your work with powerful online tools — from QR generation to file conversion and automation helpers.</p>
 </section>
 
