Update intro.html deleted a word

--- a/personality-test/intro.html
+++ b/personality-test/intro.html
@@ -90,7 +90,7 @@ fetch("../../components/header-tools.html")
 <!-- MAIN BOX -->
 <div class="test-wrapper">
 
-  <h1>قبل از شروع تست…</h1>
+  <h1>قبل از شروع …</h1>
 
   <p>
     این تست به شما نشان می‌دهد کدام مدل از کسب‌وکارهای آنلاین با شخصیت، توانایی‌ها
