--- a/index.html
+++ b/index.html
@@ -277,49 +277,49 @@
     </div>
   </section>
 
-  <!-- SERVICES -->
-  <section id="services" class="section services-section">
-    <h2 class="section-title">Our Services</h2>
-    <p class="section-sub">Complete solutions for your digital transformation</p>
+ <!-- SERVICES -->
+<section id="services" class="section services-section">
+  <h2 class="section-title">Our Services</h2>
+  <p class="section-sub">Complete solutions for your digital transformation</p>
 
-    <div class="services-grid">
-      <div class="service-card">
-        <img src="/services/images/online-biz.jpg" alt="Online Business" />
-        <h3>Learn Digital Marketing & Earn Money Online</h3>
-        <p>
-          Master practical digital marketing skills and build real online income 
-          using proven strategies, content systems, and automation tools.
-        </p>
-      </div>
+  <div class="services-grid">
 
-      <div class="service-card">
-        <img src="/services/images/data-analytics.jpg" alt="Data Analytics" />
-        <h3>Data &amp; Analytics</h3>
-        <p>Turn raw data into actionable insights.</p>
-      </div>
+    <div class="service-card">
+      <img src="/services/images/online-biz.jpg" alt="Digital Marketing" />
+      <h3>Learn Digital Marketing & Earn Money Online</h3>
+      <p>
+        Master practical digital marketing skills and build real online income 
+        using proven strategies, content systems, and automation tools.
+      </p>
+    </div>
 
-      <div class="service-card">
-        <img src="/services/images/telegram-bot.jpg" alt="Automation Bots" />
-        <h3>Telegram Bots</h3>
-        <p>Automate customer engagement and lead collection.</p>
-      </div>
-     </div>
+    <div class="service-card">
+      <img src="/services/images/data-analytics.jpg" alt="Data Analytics" />
+      <h3>Data &amp; Analytics</h3>
+      <p>Turn raw data into actionable insights.</p>
+    </div>
 
-     <div class="service-card">
-       <img src="/services/images/website-design.jpg" alt="Website Design Service" />
-       <h3>Website Design & Development</h3>
-       <p>
-         Get a fast, modern, mobile-friendly website fully designed and built for you 
-         optimized for branding, marketing, and conversions.
-       </p>
-     </div>
+    <div class="service-card">
+      <img src="/services/images/telegram-bot.jpg" alt="Telegram Bots" />
+      <h3>Telegram Bots</h3>
+      <p>Automate customer engagement and lead collection.</p>
+    </div>
+
+    <div class="service-card">
+      <img src="/services/images/website-design.jpg" alt="Website Design Service" />
+      <h3>Website Design & Development</h3>
+      <p>
+        Get a fast, modern, mobile-friendly website fully designed and built for you —
+        optimized for branding, marketing, and conversions.
+      </p>
+    </div>
+
   </div>
 
-    <div class="cta-buttons" style="margin-top: 2rem; text-align: center;">
-      <a href="#contact" class="btn primary">Contact Me</a>
-    </div>
-    
-  </section>
+  <div class="cta-buttons" style="margin-top: 2rem; text-align: center;">
+    <a href="#contact" class="btn primary">Contact Me</a>
+  </div>
+</section>
 
   <!-- CONTACT -->
   <section id="contact" class="section contact-section">
