Update index.html added card

--- a/index.html
+++ b/index.html
@@ -323,6 +323,15 @@
       </p>
    </div>
 
+    <a href="/services/google-business-profile-optimization.html" class="service-card">
+      <img src="/services/images/google-business.jpg" alt="Google Business Profile Optimization" />
+      <h3>Google Business Profile Optimization</h3>
+      <p>
+        Fully optimize your Google Business Profile, including photos, descriptions, categories,
+        reviews, and local SEO, so your business gets discovered by more local customers.
+      </p>
+    </a>
+
   </div>
 
   <div class="cta-buttons" style="margin-top: 2rem; text-align: center;">
