Update google-business-profile-optimization.html added head

--- a/services/google-business-profile-optimization.html
+++ b/services/google-business-profile-optimization.html
@@ -1,3 +1,29 @@
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Google Business Profile Optimization</title>
+
+  <!-- Base and Global Styles -->
+  <link rel="stylesheet" href="/css/base.css" />
+  <link rel="stylesheet" href="/css/layout.css" />
+  <link rel="stylesheet" href="/css/style.css" />
+
+  <!-- Components + Buttons + Cards -->
+  <link rel="stylesheet" href="/css/components.css" />
+  <link rel="stylesheet" href="/css/cards.css" />
+
+  <!-- Pages -->
+  <link rel="stylesheet" href="/css/service-page.css" />
+
+  <!-- Optional: Tools, Blog, etc. only if used on this page -->
+  <!-- <link rel="stylesheet" href="/css/tools.css" /> -->
+  <!-- <link rel="stylesheet" href="/css/blog.css" /> -->
+
+  <!-- Responsive (GLOBAL) -->
+  <link rel="stylesheet" href="/css/responsive.css" />
+</head>
+
+
 <!-- HERO SECTION -->
 <section class="service-hero">
   <div class="container">
